// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storybook snapshot tests Storyshots Examples/Layouts One To One Call Layout 1`] = `
<div
  className="css-82 body-0"
>
  <div
    className="css-82"
    data-uses-unhanded-props={true}
    dir="ltr"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": "100vh",
          "justifyContent": "center",
        }
      }
    >
      <div
        className="ms-Stack css-2"
        style={
          Object {
            "border": "1px",
            "height": "500px",
            "width": "600px",
          }
        }
      >
        <div
          className="ms-Stack css-8"
        >
          <div
            className="ms-Stack css-9"
          >
            <div
              className="ms-Stack css-11"
            >
              <div
                aria-label=""
                className="ms-Persona ms-Persona--size100 root-12"
              >
                <div
                  className="ms-Persona-coin ms-Persona--size100 coin-19"
                  role="presentation"
                >
                  <div
                    className="ms-Persona-imageArea imageArea-21"
                    role="presentation"
                  >
                    <div
                      aria-hidden="true"
                      className="ms-Persona-initials initials-24"
                    >
                      <span>
                        H
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ms-Stack css-80 css-27"
          >
            <div
              className="ms-StackItem css-28"
            >
              <span
                className="css-29"
              >
                Holly
              </span>
            </div>
          </div>
          <div
            className="ms-Stack css-30"
          >
            <div
              className="ms-Stack css-8"
            >
              <div
                className="ms-Stack css-9"
              >
                <div
                  className="ms-Persona ms-Persona--size56 root-31"
                >
                  <div
                    className="ms-Persona-coin ms-Persona--size56 coin-19"
                    role="presentation"
                  >
                    <div
                      className="ms-Persona-imageArea imageArea-34"
                      role="presentation"
                    >
                      <div
                        aria-hidden="true"
                        className="ms-Persona-initials initials-37"
                      >
                        <span>
                          T
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="ms-Stack css-80 css-27"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots Examples/Layouts Screen Share Layout 1`] = `
<div
  className="css-82 body-0"
>
  <div
    className="css-82"
    data-uses-unhanded-props={true}
    dir="ltr"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": "100vh",
          "justifyContent": "center",
        }
      }
    >
      <div
        className="ms-Stack css-7"
        style={
          Object {
            "border": ".063rem",
            "height": "500px",
            "width": "850px",
          }
        }
      >
        <div
          className="ms-StackItem css-8"
        >
          <div
            className="ms-Stack css-9"
          >
            <div
              className="ms-Stack css-10"
            >
              <div
                className="ms-Stack css-11"
              >
                <div
                  className="ms-Stack css-16"
                >
                  <div
                    className="ms-Stack css-17"
                  >
                    <div
                      className="ms-Persona ms-Persona--size56 root-18"
                    >
                      <div
                        className="ms-Persona-coin ms-Persona--size56 coin-25"
                        role="presentation"
                      >
                        <div
                          className="ms-Persona-imageArea imageArea-27"
                          role="presentation"
                        >
                          <div
                            aria-hidden="true"
                            className="ms-Persona-initials initials-30"
                          >
                            <span>
                              M
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ms-Stack css-80 css-33"
                  >
                    <div
                      className="ms-StackItem css-34"
                    >
                      <span
                        className="css-35"
                      >
                        Michael
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-10"
            >
              <div
                className="ms-Stack css-11"
              >
                <div
                  className="ms-Stack css-16"
                >
                  <div
                    className="ms-Stack css-17"
                  >
                    <div
                      className="ms-Persona ms-Persona--size56 root-18"
                    >
                      <div
                        className="ms-Persona-coin ms-Persona--size56 coin-25"
                        role="presentation"
                      >
                        <div
                          className="ms-Persona-imageArea imageArea-27"
                          role="presentation"
                        >
                          <div
                            aria-hidden="true"
                            className="ms-Persona-initials initials-36"
                          >
                            <span>
                              J
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ms-Stack css-80 css-33"
                  >
                    <div
                      className="ms-StackItem css-34"
                    >
                      <span
                        className="css-35"
                      >
                        Jim
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-10"
            >
              <div
                className="ms-Stack css-11"
              >
                <div
                  className="ms-Stack css-16"
                >
                  <div
                    className="ms-Stack css-17"
                  >
                    <div
                      className="ms-Persona ms-Persona--size56 root-18"
                    >
                      <div
                        className="ms-Persona-coin ms-Persona--size56 coin-25"
                        role="presentation"
                      >
                        <div
                          className="ms-Persona-imageArea imageArea-27"
                          role="presentation"
                        >
                          <div
                            aria-hidden="true"
                            className="ms-Persona-initials initials-37"
                          >
                            <span>
                              P
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ms-Stack css-80 css-33"
                  >
                    <div
                      className="ms-StackItem css-34"
                    >
                      <span
                        className="css-35"
                      >
                        Pam
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-10"
            >
              <div
                className="ms-Stack css-11"
              >
                <div
                  className="ms-Stack css-16"
                >
                  <div
                    className="ms-Stack css-17"
                  >
                    <div
                      className="ms-Persona ms-Persona--size56 root-18"
                    >
                      <div
                        className="ms-Persona-coin ms-Persona--size56 coin-25"
                        role="presentation"
                      >
                        <div
                          className="ms-Persona-imageArea imageArea-27"
                          role="presentation"
                        >
                          <div
                            aria-hidden="true"
                            className="ms-Persona-initials initials-38"
                          >
                            <span>
                              D
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ms-Stack css-80 css-33"
                  >
                    <div
                      className="ms-StackItem css-34"
                    >
                      <span
                        className="css-35"
                      >
                        Dwight
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-10"
            >
              <div
                className="ms-Stack css-11"
              >
                <div
                  className="ms-Stack css-16"
                >
                  <div
                    className="ms-Stack css-17"
                  >
                    <div
                      className="ms-Persona ms-Persona--size56 root-18"
                    >
                      <div
                        className="ms-Persona-coin ms-Persona--size56 coin-25"
                        role="presentation"
                      >
                        <div
                          className="ms-Persona-imageArea imageArea-27"
                          role="presentation"
                        >
                          <div
                            aria-hidden="true"
                            className="ms-Persona-initials initials-39"
                          >
                            <span>
                              K
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ms-Stack css-80 css-33"
                  >
                    <div
                      className="ms-StackItem css-34"
                    >
                      <span
                        className="css-35"
                      >
                        Kelly
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-10"
            >
              <div
                className="ms-Stack css-11"
              >
                <div
                  className="ms-Stack css-16"
                >
                  <div
                    className="ms-Stack css-17"
                  >
                    <div
                      className="ms-Persona ms-Persona--size56 root-18"
                    >
                      <div
                        className="ms-Persona-coin ms-Persona--size56 coin-25"
                        role="presentation"
                      >
                        <div
                          className="ms-Persona-imageArea imageArea-27"
                          role="presentation"
                        >
                          <div
                            aria-hidden="true"
                            className="ms-Persona-initials initials-40"
                          >
                            <span>
                              R
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ms-Stack css-80 css-33"
                  >
                    <div
                      className="ms-StackItem css-34"
                    >
                      <span
                        className="css-35"
                      >
                        Ryan
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-10"
            >
              <div
                className="ms-Stack css-11"
              >
                <div
                  className="ms-Stack css-16"
                >
                  <div
                    className="ms-Stack css-17"
                  >
                    <div
                      className="ms-Persona ms-Persona--size56 root-18"
                    >
                      <div
                        className="ms-Persona-coin ms-Persona--size56 coin-25"
                        role="presentation"
                      >
                        <div
                          className="ms-Persona-imageArea imageArea-27"
                          role="presentation"
                        >
                          <div
                            aria-hidden="true"
                            className="ms-Persona-initials initials-41"
                          >
                            <span>
                              A
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ms-Stack css-80 css-33"
                  >
                    <div
                      className="ms-StackItem css-34"
                    >
                      <span
                        className="css-35"
                      >
                        Andy
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-StackItem css-42"
        >
          <div
            className="ms-Stack css-16"
          >
            <div
              className="ms-Stack css-17"
            >
              <div
                className="ms-Stack css-44"
              >
                <div
                  className="ms-Stack css-45"
                >
                  Your Screen Share Stream
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-80 css-33"
            />
            <div
              className="ms-Stack css-46"
            >
              <div
                className="ms-Stack css-16"
              >
                <div
                  className="ms-Stack css-17"
                >
                  <div
                    className="ms-Persona ms-Persona--size56 root-18"
                  >
                    <div
                      className="ms-Persona-coin ms-Persona--size56 coin-25"
                      role="presentation"
                    >
                      <div
                        className="ms-Persona-imageArea imageArea-27"
                        role="presentation"
                      >
                        <div
                          aria-hidden="true"
                          className="ms-Persona-initials initials-47"
                        >
                          <span>
                            T
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="ms-Stack css-80 css-33"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
